tests/ui/borrowck/borrowck-fn-in-const-c.stderr
error[E0713]: borrow may still be in use when destructor runs
  --> $DIR/borrowck-fn-in-const-c.rs:17:16
   |
LL |         return &local.inner;
   |                ^^^^^^^^^^^^ returning this value requires that `local.inner` is borrowed for `'static`
LL |     }
   |     - here, drop of `local` needs exclusive access to `local.inner`, because the type `DropString` implements the `Drop` trait

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0713`.
